--- a/sub_project/Base.lproj/Main_Sub.storyboard
+++ b/sub_project/Base.lproj/Main_Sub.storyboard
@@ -11,7 +11,7 @@
         <!--SubVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="SubVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SubVC" customModule="Technicalisto_Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SubVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SubVC" customModule="sub_project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
